--- a/style.css
+++ b/style.css
@@ -76,3 +76,41 @@ button {
 
 
 
+div.indextopbanner {
+	border-radius: 6px;
+}
+
+div.indexbottombanner {
+	border-radius: 6px;
+}
+
+
+div.storetopbanner {
+	border-radius: 6px;
+}
+
+div.storebottombanner {
+	border-radius: 6px;
+}
+
+
+div.faqtopbanner {
+	border-radius: 6px;
+}
+
+div.faqbottombanner {
+	border-radius: 6px;
+}
+
+div.charitiestopbanner {
+	border-radius: 6px;
+}
+
+div.charitiesbottombanner {
+	border-radius: 6px;
+}
+
+
+
+
+
