--- a/style.css
+++ b/style.css
@@ -110,6 +110,14 @@ div.charitiesbottombanner {
 	border-radius: 6px;
 }
 
+div.geotrashtopbanner {
+	border-radius: 6px;
+}
+
+div.geotrashbottombanner {
+	border-radius: 6px;
+}
+
 
 
 
